tests/invalid/Template_Invalid_4.whiley
final int field<T> = 1